# libvocoder

./: CMakeLists.txt
include/: AudioFileReader.hpp  EnvelopeDetector.hpp  FilterBank.hpp  FilterDistributor.hpp  Vocoder.hpp  VocoderFilterDistributor.hpp  VocoderProcessor.hpp
include/vocoder/: AudioFileReader.hpp  AudioFileWriter.hpp  EnvelopeDetector.hpp  FilterBank.hpp  FilterDistributor.hpp  VocoderFilterDistributor.hpp  VocoderProcessor.hpp
src/: AudioFileReader.cpp  AudioFileWriter.cpp  EnvelopeDetector.cpp  FilterBank.cpp  FilterDistributor.cpp  VocoderFilterDistributor.cpp  VocoderProcessor.cpp  VocoderTest.cpp
